Closed Bug 1149864 Opened 11 years ago Closed 11 years ago

When safemode is on we should not attempt to create any device

Categories

(Core :: Graphics, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla40
Tracking Status
firefox37 + verified
firefox38 + verified
firefox39 + fixed
firefox40 + verified

People

(Reporter: bas.schouten, Assigned: bas.schouten)

References

Details

Attachments

(2 files)

The safe mode prefs aren't set yet when we init gfx platform. We should make sure we do not attempt to create D3D11 devices when safe-mode is on. Right now if device creation crashes somehow safe-mode will do absolutely nothing to prevent a user from crashing on startup. This is very bad.
Approval Request Comment [Feature/regressing bug #]: Something a long time ago [User impact if declined]: Safe-mode is useless in protecting users from startup device creation crashes [Describe test coverage new/current, TreeHerder]: We'll get that soon. I'll land this on inbound as soon as it's reviewed. [Risks and why]: Very low [String/UUID change made/needed]: None
Attachment #8586523 - Flags: review?(jmuizelaar)
Attachment #8586523 - Flags: approval-mozilla-release?
Attachment #8586523 - Flags: approval-mozilla-beta?
Attachment #8586523 - Flags: approval-mozilla-aurora?
Making sure you see this Milan.
Flags: needinfo?(milan)
Attachment #8586523 - Flags: review?(jmuizelaar) → review+
Good stuff. This fixes the problem with 37 not starting in safe mode.
Flags: needinfo?(milan) → needinfo?(lmandel)
(In reply to Milan Sreckovic [:milan] from comment #4) > Good stuff. This fixes the problem with 37 not starting in safe mode. Can we prove that? Now that we know the source of the problem can we reproduce it? I'm tracking this on all branches. Does this affect ESR31?
(In reply to Lawrence Mandel [:lmandel] (use needinfo) from comment #5) > (In reply to Milan Sreckovic [:milan] from comment #4) > > Good stuff. This fixes the problem with 37 not starting in safe mode. > > Can we prove that? Now that we know the source of the problem can we > reproduce it? > > I'm tracking this on all branches. Does this affect ESR31? In theory it shouldn't affect ESR31 I think, but I will double-check. The crash should be reproduced we think by someone installing Stardock Windowblinds on a blacklisted machine. It shouldn't be hard to get someone in QA to try this probably and see if they can reproduce the problem, and whether this patch makes safemode work properly again (they'll have to try without Jeff's patch, obviously).
Flags: needinfo?(lmandel)
(In reply to Bas Schouten (:bas.schouten) from comment #6) > The crash should be reproduced we think by someone installing Stardock > Windowblinds on a blacklisted machine. It shouldn't be hard to get someone > in QA to try this probably and see if they can reproduce the problem, and > whether this patch makes safemode work properly again (they'll have to try > without Jeff's patch, obviously). Looks like Windowblinds can be downloaded from http://www.stardock.com/products/windowblinds/ How can QA determine whether there machine is blacklisted? Is there some indicator in the product or an easy test that they can run?
Flags: needinfo?(lmandel) → needinfo?(bas)
Just to be clear - the claim is that this only fixes the startup crash from bug 1149864 while in the safe mode, and we may be able to verify that without asking the sumo commenting users.
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
I was able to easily reproduce the startup crash on Firefox 37.0 and Firefox 40 Nightly on Windows 7 x64 and Windows 8 x64, using the following scenario: 1. Download and install Windowblinds (http://www.stardock.com/products/windowblinds/). 2. Start Window Blinds and apply a custom style (e.g. Lantana). 3. Attempt to start Firefox in safe mode ("firefox -safe-mode"). Results: Firefox crashes before even showing the Profile Manager window (if set to show it), with crash from bug 1149761. I suppose this is the issue I'm expected to reproduce here. I was then able to start in safe mode without any crash by using the latest mozilla inbound build: - ftp://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-win32/latest/ - BuildID: 20150402051439 - Built from https://hg.mozilla.org/integration/mozilla-inbound/rev/63c87250946e Note that while Firefox starts, it does have some visual issues (e.g. top part of the window is transparent). Firefox 33.1 shows the same visual issues when starting in safe mode, but not when normally started. Chrome also shows the same visual issues. See the attached screenshot below. Is this something we know, or do we want to track it in a separate bug? Also to re-iterate Lawrence's question: is there something else that I would need to verify, other than the fact that Firefox starts without crash in safe mode?
Flags: needinfo?(bas)
(In reply to Florin Mezei, QA (:FlorinMezei) from comment #11) > I was able to easily reproduce the startup crash on Firefox 37.0 and Firefox > 40 Nightly on Windows 7 x64 and Windows 8 x64, using the following scenario: > 1. Download and install Windowblinds > (http://www.stardock.com/products/windowblinds/). > 2. Start Window Blinds and apply a custom style (e.g. Lantana). > 3. Attempt to start Firefox in safe mode ("firefox -safe-mode"). > > Results: Firefox crashes before even showing the Profile Manager window (if > set to show it), with crash from bug 1149761. I suppose this is the issue > I'm expected to reproduce here. > > I was then able to start in safe mode without any crash by using the latest > mozilla inbound build: > - > ftp://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla- > inbound-win32/latest/ > - BuildID: 20150402051439 > - Built from > https://hg.mozilla.org/integration/mozilla-inbound/rev/63c87250946e > > Note that while Firefox starts, it does have some visual issues (e.g. top > part of the window is transparent). Firefox 33.1 shows the same visual > issues when starting in safe mode, but not when normally started. Chrome > also shows the same visual issues. See the attached screenshot below. Is > this something we know, or do we want to track it in a separate bug? > > Also to re-iterate Lawrence's question: is there something else that I would > need to verify, other than the fact that Firefox starts without crash in > safe mode? This is bad, you're saying the latest nightly still crashes on startup with Window Blinds installed.. could you send me the crash report for this crash? Latest nightly should have that bug fixed already. ni? Jeff so we make sure he sees this.
Flags: needinfo?(bas) → needinfo?(jmuizelaar)
(In reply to Bas Schouten (:bas.schouten) from comment #13) > (In reply to Florin Mezei, QA (:FlorinMezei) from comment #11) > > This is bad, you're saying the latest nightly still crashes on startup with > Window Blinds installed.. could you send me the crash report for this crash? > Latest nightly should have that bug fixed already. > > ni? Jeff so we make sure he sees this. Never mind, this is dealt with on another bug.
Flags: needinfo?(jmuizelaar)
That Firefox 40 Nightly was 2015-04-01 so I thought it didn't have the fix, but now I got the update to 2015-04-02 and it seems this also crashes when launching with "firefox.exe -safe-mode": bp-2b6c65d3-49fc-470c-9e4a-d6a0f2150402 bp-f1799461-3a2c-4a16-869f-9c74a2150402 Still, based on the pushlog (https://hg.mozilla.org/mozilla-central/pushloghtml) it would seem that this was built (d222742756c4) before the fix landed.
Comment on attachment 8586523 [details] [diff] [review] no-safemode-d3d11 should be part of 38b2
Attachment #8586523 - Flags: approval-mozilla-beta?
Attachment #8586523 - Flags: approval-mozilla-beta+
Attachment #8586523 - Flags: approval-mozilla-aurora?
Attachment #8586523 - Flags: approval-mozilla-aurora+
Comment on attachment 8586523 [details] [diff] [review] no-safemode-d3d11 I reviewed this fix with Milan and Jeff (and previously Bas). We've very confident that this resolves the safe mode issues and so are going to take this fix in 37.0.1. Release+
Attachment #8586523 - Flags: approval-mozilla-release? → approval-mozilla-release+
Verified today that Firefox 37.0.1 (BuildID=20150402191859) starts without crashing, both for a normal start and in safe mode, on the same Windows 7 x64 and Windows 8 x64 machines where I reproduced the original issue with Firefox 37.0. The issue with missing titlebar is tracked separately in bug 1077245. The latest Firefox 40 Nightly (BuildID=20150402115824) also starts without crashing in safe-mode (still crashes on normal start since fix from bug 1149761 did not make Nightly yet).
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Also verified as fixed on Firefox 38 Beta 5 on Windows 7 x64 and Windows 8.1 x64.
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: