Bug 1149864 - Do not attempt to create any D3D11 device when safemode is turned on. r=jrmuizel, a=lmandel